Fix #1 #2, Add grunt-concurent, Fix some indent issues

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,53 +1,53 @@
 /* ==========================================================================
    NOM DU PROJET
-   ========================================================================== */
+   ========================================================================= */
 
 /* Vendors
-   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
     @import "vendor/reset.css";
 
 /* Vars
-   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-    @import "elements/vars.css";
+    @import "modules/vars.css";
 
 /* ==========================================================================
    COMMON
-   ========================================================================== */
+   ========================================================================= */
 
-    @import "elements/common.css";
+    @import "modules/common.css";
 
 /* ==========================================================================
    BODY
-   ========================================================================== */
+   ========================================================================= */
 
-    @import "elements/header.css";
-    @import "elements/menu.css";
-    @import "elements/layout.css";
-    @import "elements/pages.css";
-    @import "elements/footer.css";
+    @import "modules/header.css";
+    @import "modules/menu.css";
+    @import "modules/layout.css";
+    @import "modules/pages.css";
+    @import "modules/footer.css";
 
 /* ==========================================================================
    FORMS
-   ========================================================================== */
+   ========================================================================= */
 
-    @import "elements/forms.css";
+    @import "modules/forms.css";
 
 /* ==========================================================================
    RESPONSIVE
-   ========================================================================== */
+   ========================================================================= */
 
-    @import "elements/responsive.css";
+    /*@import "modules/responsive.css";*/
 
 /* ==========================================================================
    RETINA
-   ========================================================================== */
+   ========================================================================= */
 
-    @import "elements/retina.css";
+    @import "modules/retina.css";
 
 /* ==========================================================================
    PRINT
-   ========================================================================== */
+   ========================================================================= */
 
-    @import "elements/print.css";
+    @import "modules/print.css";
