--- a/app/styles/modules/forms.css
+++ b/app/styles/modules/forms.css
@@ -18,7 +18,7 @@ form {
 }
 
 /*  Common form
-    ------------------------------------------------------------------------- */
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 .commonForm {
 
