Update, all styles

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,53 +1,43 @@
-/* ==========================================================================
-   NOM DU PROJET
-   ========================================================================= */
 
-/* Vendors
-   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/*  Vendor
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
     @import "vendor/reset.css";
 
-/* Vars
-   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/*  Variables
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
     @import "modules/vars.css";
 
-/* ==========================================================================
-   COMMON
-   ========================================================================= */
+/*  ==========================================================================
+    COMMON
+    ========================================================================== */
 
-    @import "modules/common.css";
+    @import "modules/styleguide.css";
 
-/* ==========================================================================
-   BODY
-   ========================================================================= */
+/*  ==========================================================================
+    CONTENT
+    ========================================================================== */
 
     @import "modules/header.css";
     @import "modules/menu.css";
-    @import "modules/layout.css";
     @import "modules/pages.css";
     @import "modules/footer.css";
 
-/* ==========================================================================
-   FORMS
-   ========================================================================= */
+/*  ==========================================================================
+    FORMS
+    ========================================================================== */
 
     @import "modules/forms.css";
 
-/* ==========================================================================
-   RESPONSIVE
-   ========================================================================= */
-
-    /*@import "modules/responsive.css";*/
-
-/* ==========================================================================
-   RETINA
-   ========================================================================= */
+/*  ==========================================================================
+    RETINA
+    ========================================================================== */
 
     @import "modules/retina.css";
 
-/* ==========================================================================
-   PRINT
-   ========================================================================= */
+/*  ==========================================================================
+    PRINT
+    ========================================================================== */
 
     @import "modules/print.css";
