--- a/app/styles/modules/pages.css
+++ b/app/styles/modules/pages.css
@@ -1,8 +1,24 @@
+/**
+ *  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum semper risus, at egestas
+ *  Vestibulum et volutpat purus, ultrices scelerisque nisl. Quisque suscipit risus et placerat interdum neque sagittis
+ *  Nunc ex mauris, malesuada sit amet elit quis.
+ */
 
-/* ==========================================================================
-   HOME
-   ========================================================================= */
+/*  ==========================================================================
+    HOME
+    ========================================================================== */
 
-/* ==========================================================================
-   PAGE
-   ========================================================================= */
+
+/*  ==========================================================================
+    ABOUT
+    ========================================================================== */
+
+
+/*  ==========================================================================
+    ARTICLES
+    ========================================================================== */
+
+
+/*  ==========================================================================
+    CONTACT
+    ========================================================================== */
