--- a/app/styles/modules/forms.css
+++ b/app/styles/modules/forms.css
@@ -1,3 +1,8 @@
+/**
+ *  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum semper risus, at egestas
+ *  Vestibulum et volutpat purus, ultrices scelerisque nisl. Quisque suscipit risus et placerat interdum neque sagittis
+ *  Nunc ex mauris, malesuada sit amet elit quis.
+ */
 
 form {
 
@@ -18,7 +23,7 @@ form {
 }
 
 /*  Common form
-   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 .commonForm {
 
