--- a/app/styles/modules/menu.css
+++ b/app/styles/modules/menu.css
@@ -1,10 +1,2 @@
 
-.mainMenu {
-    text-align: center;
-    margin-bottom: 20px;
-
-    li {
-        display: inline-block;
-        & + li { margin-left: 20px; }
-    }
-}
+.mainMenu {}
