Update heading comment for importants stylesheets

--- a/app/styles/modules/pages.css
+++ b/app/styles/modules/pages.css
@@ -1,24 +1,24 @@
 /**
- *  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum semper risus, at egestas
- *  Vestibulum et volutpat purus, ultrices scelerisque nisl. Quisque suscipit risus et placerat interdum neque sagittis
- *  Nunc ex mauris, malesuada sit amet elit quis.
+ *  this is the inside site PAGES stylesheet.
+ *  It must be used for style relevant for the content of pages : home content, article content, any other type of content that are not in specific stylesheet.
+ *  Juste Keep it clear !
  */
 
-/*  ==========================================================================
+/*  ========================================================================
     HOME
-    ========================================================================== */
+    ======================================================================== */
 
 
-/*  ==========================================================================
+/*  ========================================================================
     ABOUT
-    ========================================================================== */
+    ======================================================================== */
 
 
-/*  ==========================================================================
+/*  ========================================================================
     ARTICLES
-    ========================================================================== */
+    ======================================================================== */
 
 
-/*  ==========================================================================
+/*  ========================================================================
     CONTACT
-    ========================================================================== */
+    ======================================================================== */
