--- a/app/styles/modules/vars.css
+++ b/app/styles/modules/vars.css
@@ -1,6 +1,6 @@
 
 /*  Custom properties
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
     :root {
         --fontSize: 1rem;
@@ -10,7 +10,7 @@
     }
 
 /*  Custom media queries
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
     @custom-media --viewport-large (width >= 980px);
     /* Usage name for your styles : @media (--viewport-large) {} */
@@ -26,6 +26,6 @@
 
 
 /*  Custom selectors
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-    
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
     @custom-selector :--heading h1, h2, h3, h4, h5, h6;
