--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,43 +1,43 @@
 
 /*  Vendor
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
     @import "vendor/reset.css";
 
 /*  Variables
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
     @import "modules/vars.css";
 
-/*  ==========================================================================
+/*  ========================================================================
     COMMON
-    ========================================================================== */
+    ======================================================================== */
 
     @import "modules/styleguide.css";
 
-/*  ==========================================================================
+/*  ========================================================================
     CONTENT
-    ========================================================================== */
+    ======================================================================== */
 
     @import "modules/header.css";
     @import "modules/menu.css";
     @import "modules/pages.css";
     @import "modules/footer.css";
 
-/*  ==========================================================================
+/*  ========================================================================
     FORMS
-    ========================================================================== */
+    ======================================================================== */
 
     @import "modules/forms.css";
 
-/*  ==========================================================================
+/*  ========================================================================
     RETINA
-    ========================================================================== */
+    ======================================================================== */
 
     @import "modules/retina.css";
 
-/*  ==========================================================================
+/*  ========================================================================
     PRINT
-    ========================================================================== */
+    ======================================================================== */
 
     @import "modules/print.css";
