--- a/app/styles/modules/forms.css
+++ b/app/styles/modules/forms.css
@@ -1,7 +1,6 @@
 /**
- *  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum semper risus, at egestas
- *  Vestibulum et volutpat purus, ultrices scelerisque nisl. Quisque suscipit risus et placerat interdum neque sagittis
- *  Nunc ex mauris, malesuada sit amet elit quis.
+ *  This is the form Stylesheet !
+ *  It's must be used for style any form : search, contact, subscribe,etc.
  */
 
 form {
@@ -23,7 +22,7 @@ form {
 }
 
 /*  Common form
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 .commonForm {
 
