WIP Grunt to NPM

--- a/app/styles/modules/styleguide.css
+++ b/app/styles/modules/styleguide.css
@@ -147,6 +147,7 @@ time {
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 .btn1 {
+    transition: transform 1s;
 }
 
 /*  Lists
