--- a/app/styles/modules/styleguide.css
+++ b/app/styles/modules/styleguide.css
@@ -101,12 +101,12 @@ time {
 .wrapper {}
 
 .container {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 20px;
+    @neat-outer-container;
 }
 
-.mainContent {}
+.mainContent {
+    @neat-span-columns 6;
+}
 .innerContainer {}
 .innerContent {}
 
