--- a/app/styles/modules/styleguide.css
+++ b/app/styles/modules/styleguide.css
@@ -17,7 +17,7 @@ body {
 
 body {
     font: 1.2em/1.6em Arial, sans-serif;
-    background-color: #fff;
+    background-color: #000;
     color: #000;
 }
 
